# C-Memory-Manager

./: CMakeLists.txt  README  main.c  output.csv  output.txt
libtdmm/: tdmm.c  tdmm.h
